--- a/package.json
+++ b/package.json
@@ -113,15 +113,16 @@
     "test": "node ./node_modules/vscode/bin/test"
   },
   "devDependencies": {
-    "@types/mocha": "^2.2.41",
-    "@types/node": "^8.0.15",
+    "@types/mocha": "^2.2.48",
+    "@types/node": "^8.5.9",
     "mocha": "^3.4.2",
+    "typescript": "^2.7.1",
     "vscode": "^1.1.10"
   },
   "extensionDependencies": [
     "ms-vscode.cpptools"
   ],
   "dependencies": {
-    "ajv": "^5.2.2"
+    "ajv": "^5.5.2"
   }
 }
