(1) Add support for (optionally) specifying build configurations from msbuild-tools.json. H/t @ja-no (2) bump version to 0.0.9

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "configurations": [
         {
-            "name": "Launch Extension (xcode-sample)",
+            "name": "Launch Extension (msbuild-sample)",
             "type": "extensionHost",
             "request": "launch",
             "runtimeExecutable": "${execPath}",
